# mlsg

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  TODO.md  config.smoke.toml  config.toml  pyproject.toml
.claude/agents/: state-summarizer.md
prompts/: 01_master_plot.md  02_backstory.md  03_master_plot_and_backstory_validation.md  04_charactor.md  05_chapter.md  06_timeline.md  07_stylist.md  08_scene.md
src/mlsg/: __init__.py  __main__.py  cli.py  config.py  domain.py  errors.py  logging.py  persistence.py  pipeline.py  result.py
src/mlsg/layers/: __init__.py  backstory.py  chapter.py  character.py  mpbv.py  plot.py  scene.py  stylist.py  timeline.py
src/mlsg/llm/: __init__.py  client.py  prompts.py  retry.py
tests/: test_config.py  test_domain.py  test_layers.py  test_persistence.py  test_pipeline.py  test_result.py
tools/novel2pdf/: README.md  novel2pdf.py
